<resources>
    <string name="app_name">SimpleCloudManager</string>
    <string name="domainRecord_item_data">Значение</string>
    <string name="domainRecord_item_host">Хост</string>
    <string name="domainRecord_item_type">Тип</string>
    <string name="domainRecord_item_ttl">TTL</string>
    <string name="domainRecord_item_priority">Приоритет</string>
    <string name="top_menu_refresh">Обновить</string>
    <string name="login_form_title">Авторизация</string>
    <string name="login_form_email">Логин(E-mail)</string>
    <string name="login_form_pass">Пароль</string>
    <string name="login_form_pin">••••</string>
    <string name="login_form_reg_button">Добавить аккаунт</string>
    <string name="action_type">Событие</string>
    <string name="action_initiator">Инициатор</string>
    <string name="server_location">Местоположение</string>
    <string name="server_price">Стоимость</string>
    <string name="server_id">ID</string>
    <string name="server_paymentDate">Следующий платеж</string>
    <string name="server_statistics_value">в среднем за час</string>
    <string name="server_tab_action">События</string>
    <string name="server_tab_statistics">Статистика</string>
    <string name="server_tab_backups">Резервные копии</string>
    <string name="server_tab_main">Главная</string>
    <string name="backup_oc">ОС</string>
    <string name="backup_size">Объем</string>
    <string name="backup_price">Стоимость</string>
    <string name="navigation_login">Авторизация</string>
    <string name="navigation_profile">Профиль</string>
    <string name="navigation_domains">Домены</string>
    <string name="navigation_servers">VDS</string>
    <string name="server_statistics_cpu">Процессор</string>
    <string name="pin_layout_title">Добро пожаловать</string>
    <string name="pin_layout_title_new">Установите пин код</string>
    <string name="login_submit_pass_no">Укажите пароль</string>
    <string name="login_submit_login_no">Укажите логин</string>
    <string name="login_submit_correct">Акаунт добавлен</string>
    <string name="data_update_load">Обновление данных</string>
    <string name="data_update_complete">Данные обновлены</string>
    <string name="login_pin_incorrect">Неверный код</string>
    <string name="login_submit_not_found">Неверный логин или пароль</string>
    <string name="login_form_demo">develop mode</string>
    <string name="chart_cpu">CPU</string>
    <string name="chart_ram">RAM</string>
    <string name="chart_cpu_desc">Данные за последний час</string>
    <string name="server_id_pref">ID:</string>
    <string name="server_ip_pref">IP:</string>
    <string name="data_empty_id">12345</string>
    <string name="data_empty_start">0000-00-00, 00:00 — </string>
    <string name="data_empty_complete">0000-00-00, 00:00</string>
    <string name="data_empty_type">Событие сервера</string>
    <string name="data_empty_initiator">Система</string>
    <string name="data_empty_status">завершено</string>
    <string name="data_empty_os">system</string>
    <string name="data_empty_price">0.00 руб./час</string>
    <string name="data_empty_total">00</string>
    <string name="data_empty_percent">55.08 %</string>
    <string name="data_empty_size">1 Gb</string>
    <string name="data_empty_la_title">Дисковое хранилище</string>
    <string name="data_empty_name">server_name</string>
    <string name="data_empty_uptime">"Uptime: 3555д. 7ч. "</string>
    <string name="top_menu_settings">Настройки</string>
    <string name="top_menu_account">Профиль</string>
    <string name="error_empty">Нет данных</string>
    <string name="error_fall_connect">Нет доступа к сети</string>
    <string name="error_fall_auth">Ошибка авторизации</string>
    <string name="error_fall_request">Ошибка ответа сервера</string>
</resources>
