<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseListItem.Backup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ListItemHeader"
        android:id="@+id/backup_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/backup_oc_title">

        <TextView
            android:id="@+id/backup_id"
            style="@style/ActionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_empty_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/backup_date"
            style="@style/ActionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_empty_complete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/backup_oc_title"
        style="@style/ActionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/backup_oc"
        app:layout_constraintBottom_toTopOf="@+id/backup_oc"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backup_top" />

    <TextView
        android:id="@+id/backup_oc"
        style="@style/ActionValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data_empty_os"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backup_oc_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.333" />

    <TextView
        android:id="@+id/backup_size_title"
        style="@style/ActionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/backup_size"
        app:layout_constraintBottom_toTopOf="@+id/backup_size"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/backup_top" />

    <TextView
        android:id="@+id/backup_size"
        style="@style/ActionValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data_empty_total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/backup_size_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.666" />

    <TextView
        android:id="@+id/backup_price_title"
        style="@style/ActionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/backup_price"
        app:layout_constraintBottom_toTopOf="@+id/backup_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/backup_top" />

    <TextView
        android:id="@+id/backup_price"
        style="@style/ActionValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data_empty_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/backup_price_title"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>