<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        style="@style/BaseDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/data_empty_la_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/size"
        style="@style/BaseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_empty_size"
        app:layout_constraintBottom_toTopOf="@+id/progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/value"
        style="@style/BaseTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data_empty_percent"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/value_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/size"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/value_title"
        style="@style/BaseDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/server_statistics_value"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/size"
        app:layout_constraintTop_toBottomOf="@+id/value" />


    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_title" />


</androidx.constraintlayout.widget.ConstraintLayout>